2004-08-01 Borut Razem <borut.razem@siol.net>
	* makefile.mingw, cli/makefile.mingw, gpsim/makefile.mingw,
	  gui/makefile.mingw, modules/makefile.mingw, src/makefile.mingw,
	  plat/win32/make.mingw:
	  added mingw (cygwin -mno-cygwin) gcc WIN32 native makefiles
	* config_win32.h.in, gui/gui_breadboard.cc, gui/gui_menu.cc,
	  src/hexutils.cc, cli/input.cc, src/interface.cc, src/packages.cc,
	  src/pic_processor.cc, plat/win32/uxtime.h, src/xref.cc:
	  changes to enable mingw (cygwin -mno-cygwin) gcc WIN32 native
	  compilation
	* src/modules.cc: added initialization of widget Module class member
	* plat/win32/glist.cpp: corrected line formatting


2004-07-31 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: updated exports
	* acinclude.m4, src/breakpoints.cc, cli/input.cc: small cleanups

2004-07-29 Scott Dattalo <scott@dattalo.com>
	* src/14bit-instructions.cc, src/16bit-instructions.cc, src/pic-instructions.cc,
	src/pic-registers.cc, src/trace.cc, src/trace.h: The newly rewritten
	trace printing code was broken. The good news is that while fixing
	it, I found a way to save a little simulation time by not tracing
	the instruction opcodes.

2004-07-29 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h, src/modules.cc, src/registers.cc,
	src/registers.h, src/stimuli.cc, src/stimuli.h:
	Minor stimuli bug fixes, commenting and general cleanup.
	* cli/cmd_trace.cc, src/trace.cc, src/trace.h, src/trace_orb.h,
	src/pic-registers.cc, src/processor.cc, src/processor.h:
	Rewrote the trace printing code.

2004-07-24 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: updated exports
	* plat/win32/gpsim.nsi: don't cd when running gpsim
	* doc/gpsimWin32.html: XHTML 1.0 compliant, snapshots at a separate page

2004-07-22 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, modules/resistor.cc, modules/resistor.h:
	Bug fixes to the recent I/O pin redesign
	
2004-07-22 Scott Dattalo <scott@dattalo.com>