@@ -19,6 +19,8 @@ the Free Software Foundation, 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.  */
 
 
+#include "../config.h"
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <sys/types.h>
@@ -49,7 +51,6 @@ Boston, MA 02111-1307, USA.  */
 #include "../src/icd.h"
 #include "../src/pic-processor.h"
 #include "../src/breakpoints.h"
-#include "../config.h"
 #include "command.h"
 #include "input.h"
 
