@@ -21,11 +21,11 @@ Boston, MA 02111-1307, USA.  */
 
 #define GTK_ENABLE_BROKEN
 
-#include <stdio.h>
 #include "../config.h"
 #ifdef HAVE_GUI
 
 
+#include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <gtk/gtk.h>
