@@ -20,7 +20,6 @@ Boston, MA 02111-1307, USA.  */
 
 
 #include <stdio.h>
-#include <stdlib.h>
 
 #include "../config.h"
 #include "pic-processor.h"
