@@ -18,10 +18,6 @@ along with gpasm; see the file COPYING.  If not, write to
 the Free Software Foundation, 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.  */
 
-
-#include <stdio.h>
-#include <stdlib.h>
-
 #include "../config.h"
 #include "xref.h"
 #include "gpsim_interface.h"
